--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "typescript": "^4.1.2",
+    "uuid": "^11.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
